--- a/search/static/css/navshell.scss
+++ b/search/static/css/navshell.scss
@@ -8,7 +8,7 @@
 }
 
 #navshell-logo {
-    width: 250px;
+    min-width: 300px;
     padding: 0 0 0 10px;
     color: #777;
 }
@@ -52,6 +52,8 @@
 }
 
 #logo-img {
+    float: left;
+    margin-right: 10px;
 }
 
 #navshell-header-bar {
